Bug 137865 - .uno:StylesPreview use wrong background color (gtk3)
Summary: .uno:StylesPreview use wrong background color (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: gtk3-themeing
  Show dependency treegraph
 
Reported: 2020-10-29 22:14 UTC by andreas_k
Modified: 2020-10-31 14:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
gtk3 backend theme (93.34 KB, image/png)
2020-10-29 22:14 UTC, andreas_k
Details
StylesPreview has the wrong widget background (103.16 KB, image/png)
2020-10-30 09:39 UTC, andreas_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2020-10-29 22:14:16 UTC
Created attachment 166860 [details]
gtk3 backend theme

It look like the .uno:StylesPreview (stylespreview.ui) use the wrong widget background color.
Comment 1 Caolán McNamara 2020-10-30 09:35:10 UTC
its not obvious to me what widget you are referring to in the screenshot ?
Comment 2 andreas_k 2020-10-30 09:39:36 UTC
Created attachment 166867 [details]
StylesPreview has the wrong widget background

In the notebookbar.ui file there is .uno:StylesPreview which include stylespreview.ui into notebookbar.ui and the stylespreview.ui section didn't use the correct color.
Comment 3 Caolán McNamara 2020-10-30 17:09:07 UTC
ah yes I see. The stylescontainer is centered vertically inside a GtkBox so the default gray is shown in that unused vertical space.
Comment 4 Commit Notification 2020-10-31 14:37:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3d62dd95446a7289ddcc33697811e7acefe4057

tdf#137865 use stack background to match the other notebookbar areas

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2020-10-31 14:43:23 UTC
that looks about right to me