tdf#137865 use stack background to match the other notebookbar areas

while the StylesPreviewWindow_Impl is the lone InterimItemWindow in
the notebookbar

Change-Id: Ie00d5c5ce3b257891696e95a91e6c88bfa0cbcde
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105085
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>